--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -3088,9 +3088,20 @@ to use the Poisson summation formula, aka the modular property of the theta func
 \end{exercise}
 
 
-\subsection{Effective field theory in quantum mechanics}
+\subsection{Perturbation theory in quantum mechanics}
 
-\fixme{effective field theory in a coupled system}
+Now how about path integrals for actions which are not quadratic but are close
+to quadratic, in the same sense as \fixme{...} above? For example, let's consider
+the \ti{anharmonic oscillator}, which is the case $Y = \R$, 
+\begin{equation}
+  V(x) = \half \omega^2 x^2 + \qtr \mu x^4.
+\end{equation}
+Following the same pattern as \fixme{...}, we can write down \ti{Feynman rules}
+for the asymptotic expansion of the partition function, or correlation functions, in 
+powers of $\mu$. In fact they are formally exactly the same rules as before, just adapted
+to the case where $\cC$ is an infinite-dimensional space.
+
+
 
 
 \subsection{Supersymmetric quantum mechanics}
