--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -2892,7 +2892,7 @@ The facts \eqref{eq:1d-symm-1}, \eqref{eq:1d-symm-2}
 can also be understood from the Hamiltonian point of view, i.e.
 using the fact that
 \begin{equation} \label{eq:correlation-hamiltonian}
-	\IP{\cO_1(t_1) \cO_2(t_2) \cdots \cO_n(t_n)}_{S^1(T)} = \Tr_{\cH} \e^{-t_1 H} \hat\cO_1 \e^{-(t_2 -t_1) H} \hat\cO_2 \cdots \hat\cO_n \e^{-(T-t_n)}.
+	\IP{\cO_1(t_1) \cO_2(t_2) \cdots \cO_n(t_n)}_{S^1(T)} = \Tr_{\cH} \e^{-t_1 H} \hat\cO_1 \e^{-(t_2 -t_1) H} \hat\cO_2 \cdots \hat\cO_n \e^{-(T-t_n) H}.
 \end{equation}
 
 \begin{exercise}
