remove wrong statement about what happens if no spin structure

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -1564,6 +1564,17 @@ combinatorial expression for the Pfaffian, namely if $\rank M = 2n$ then
   \Pf(M) = \frac{1}{2^n n!} \sum_{\sigma \in S_{2n}} (\sgn \sigma) \prod_{i=1}^n M_{\sigma(2i-1), \sigma(2i)}.
 \end{equation}
 \end{exercise}
+The coordinate-independent version of this is:
+\begin{exercise}
+  Suppose $V = V^1$ is an odd vector space with a quadratic 
+  element $M \in \Sym^2(V)$. Show that there is a canonical element
+  $\Pf(M) \in \wedge^\rmtop(\Pi (V^1)^*)$, 
+  and that if we choose an element
+  $\de \mu \in \wedge^\rmtop(\Pi V^1)$, then
+  \begin{equation}
+    \int_V \de \mu \, \e^{-M} = \de \mu \cdot \Pf(M).
+  \end{equation}
+\end{exercise}
 
 When $C \neq 0$ we compute $Z / Z_0$ by Feynman diagrams.
 The rules are just as they were in the even case, except that
@@ -1571,7 +1582,6 @@ we have to be careful about signs.
 % We fix (arbitrarily) an ordering of the half-edges of the diagram.
 % Then, in the contribution from each labeling of the half-edges,
 \fixme{...}
-
 
 \begin{exercise} Suppose again $\cC = \R^{0 \vert 4}$ and $S = m \psi^1 \psi^2 + m \psi^3 \psi^4 + \lambda \psi^1 \psi^2 \psi^3 \psi^4$. Show that $Z = m^2 - \lambda$ by the Feynman diagram expansion. (There is only
 one nonempty diagram which contributes.)
@@ -3291,29 +3301,26 @@ for $Y = \R^n$, and show that $Z_{S^1(T);N} = 0$
 for any $N$ when $n$ is odd.
 \end{exercise}
 When $Y$ is even-dimensional, 
-subtler topological questions come into play.
-\begin{exercise} Write out the discretized action $S_N$
-for a general even-dimensional $Y$, and show that $Z_{S^1(T);N} = 0$ 
-for any $N$ if $w_2(Y) \neq 0$. \fixme{check! is it really correct?}
-\end{exercise}
+subtler topological questions come into play: \fixme{explain
+need for a spin structure}
 
-To convince ourselves that this is not just some mistake in
-how we are doing the discretization, let us consider the 
-infinite-dimensional perspective. As usual we imagine performing
-the path integral by first integrating over fermions, then over bosons.
-Thus we fix a map $\phi: S^1 \to Y$ and consider the remaining 
-fermionic integral of $\psi \in \Pi \Gamma(\phi^* TM)$. 
-Formally it should be some kind of Pfaffian of the
-skew-symmetric form $g(\psi, \nabla_t \psi)$ on $\Gamma(\phi^* TM)$. 
-Now one formally computes \cite{MR816738} 
-that the determinant of this form is (up to a $\phi$-independent constant) 
-$\det(1 - H(\phi))$ where $H(\phi)$ is the holonomy of the 
-Levi-Civita connection around the loop $\phi$. The question thus
-arises, as $\phi$ varies, is it possible to consistently define
-a square root of $\det(1 - H(\phi))$? This is possible just if
-all the holonomies 
-$H(\phi)$ can be consistently lifted from $\SO(2n)$ to $\Spin(2n)$,
-i.e. just if $Y$ admits a spin structure. \fixme{...}
+% To convince ourselves that this is not just some mistake in
+% how we are doing the discretization, let us consider the 
+% infinite-dimensional perspective. As usual we imagine performing
+% the path integral by first integrating over fermions, then over bosons.
+% Thus we fix a map $\phi: S^1 \to Y$ and consider the remaining 
+% fermionic integral of $\psi \in \Pi \Gamma(\phi^* TM)$. 
+% Formally it should be some kind of Pfaffian of the
+% skew-symmetric form $g(\psi, \nabla_t \psi)$ on $\Gamma(\phi^* TM)$. 
+% Now one formally computes \cite{MR816738} 
+% that the determinant of this form is (up to a $\phi$-independent constant) 
+% $\det(1 - H(\phi))$ where $H(\phi)$ is the holonomy of the 
+% Levi-Civita connection around the loop $\phi$. The question thus
+% arises, as $\phi$ varies, is it possible to consistently define
+% a square root of $\det(1 - H(\phi))$? This is possible just if
+% all the holonomies 
+% $H(\phi)$ can be consistently lifted from $\SO(2n)$ to $\Spin(2n)$,
+% i.e. just if $Y$ admits a spin structure. \fixme{...}
 
 In any case, I believe that
 the discretized path integrals indeed converge as $N \to \infty$,
