--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -2672,7 +2672,7 @@ When $V \neq 0$ we can make a similar formal argument to motivate
 One technical point is that we need to be able to separate
 the pieces involving $\Delta$ from the pieces involving $V$.
 This is done using the following, 
-applied to $A = -T \Delta$, $B = T V$:
+applied to $A = -\half T \Delta$, $B = T V$:
 \begin{prop}[Trotter product formula] \label{prop:trotter}
 \fixme{with appropriate functional analytic hypothesis}
 \begin{equation}
