oops, comment out wrong statement again

--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -3435,14 +3435,12 @@ would not quite make sense to identify
 $Z_{[0,T]_{y_0}^{y_1}}$ with $k_T(y_0, y_1)$.
 \fixme{...}
 
-
-
-\begin{prop} $Z_{[0,T]_{y_0}^{y_1}}$ is the
-contraction between $k_T(y_0,y_1) \in \Hom(S_{y_0}, S_{y_1})$ 
-and the element in $\Hom(S_{y_1}, S_{y_0})$ 
-given by parallel transport with respect 
-to the Levi-Civita connection in $S$. \fixme{oops, this makes no sense}
-\end{prop}
+% \begin{prop} $Z_{[0,T]_{y_0}^{y_1}}$ is the
+% contraction between $k_T(y_0,y_1) \in \Hom(S_{y_0}, S_{y_1})$ 
+% and the element in $\Hom(S_{y_1}, S_{y_0})$ 
+% given by parallel transport with respect 
+% to the Levi-Civita connection in $S$. \fixme{oops, this makes no sense}
+% \end{prop}
 
 \begin{prop} $Z_{S^1(T)} = \STr \e^{-TH}$.
 \end{prop}
