--- a/qft-geometry.tex
+++ b/qft-geometry.tex
@@ -3364,12 +3364,12 @@ differing from the standard one
 by a map $g: S^1(T) \to \SO(2)$. Such a change does not affect the fermion measure
 but changes the coordinate expression of the connection $\nabla_t$ to
 \begin{equation}
-  \nabla_t = \partial_t + A
+  \nabla_t = \partial_t + A_t
 \end{equation}
 where $A = g^{-1} \de g \in \Omega^1(S^1(T), \fso(2))$. The simplest choice would be
 to take $g(t) = \exp(2 \pi k \frac{t}{T} R)$ where $R \in \fso(2)$ is the standard rotation generator
-and $k \in \Z$ is a winding number; then we get $A = \frac{2 \pi k}{T} R$, which changes the 
-discretized action to
+and $k \in \Z$ is a winding number; then we get $A_t = \frac{2 \pi k}{T} R$, with corresponding
+discretized action
 \begin{equation}
   \half \sum_{i=1}^N \left( \delta_{ab} \psi^a_i \psi^b_{i+1} + \frac{2 \pi k}{N} \psi^1_i \psi^2_i \right). 
 \end{equation}
